# project-genesis

./: .gitignore  LICENSE  LICENSE.md  README.md  build.gradle.kts  othello.py  pyproject.toml  settings.gradle.kts
configs/6x6/: architecture.yaml  optimization.yaml  system.yaml
configs/config1/: composition.yaml  graphs.yaml  memory.yaml  reward.yaml  training.yaml
modules/cerebrum/: build.gradle.kts
modules/cerebrum/src/main/java/: module-info.java
modules/cerebrum/src/main/python/: requirements.txt  worker.py
modules/cerebrum/src/main/resources/: default.properties  log4j2.xml
modules/cerebrum/src/main/resources/configs/config1/: architecture.yaml  architecture.yml  graphs.yaml  model.yaml  optimization.yaml  system.yaml
modules/cerebrum/src/main/resources/configs/config2/: architecture.yaml  (+5 more)
modules/cerebrum/src/test/java/: module-info.java
modules/new-eden/: build.gradle.kts
modules/new-eden/src/main/java/: module-info.java
projects/cerebrum/: README.md  build.gradle.kts
projects/cerebrum/src/main/java/: module-info.java
projects/cerebrum/src/main/python/: requirements.txt  worker.py
projects/cerebrum/src/main/resources/: log4j2.xml  logback.xml
projects/new-eden/: build.gradle.kts
projects/new-eden/src/main/java/: module-info.java
src/maci/: __init__.py  __main__.py
src/maci/configs/: config.py
src/maci/core/: cerebrum.py  environmental_buffer.py  message_buffer.py  neuron.py  neuron_grid.py
src/maci/ml/: actor.py  actor_critic.py  agent.py  critic.py  fnn.py  memory_critic.py  message_agent.py  multi_fnn.py  routing_agent.py  transformer.py
src/maci/neurons/: meta_neuron.py  neuron.py  root_neuron.py
src/maci/nn/: actor_critic.py  composition.py  decomposition.py  fnn.py  memory.py  memory_critic.py  reward.py  transformer.py
src/maci/utils/: config.py  ema.py  embeddings.py  memory_state_buffer.py  mmap_object.py  model_optimizer.py  persistent_array.py  persistent_state.py  replay_buffer.py  text_dataset.py
src/main/java/: module-info.java
src/project_genesis/: __init__.py  __main__.py  cerebrum.py
src/project_genesis/configs/: configs.py
src/project_genesis/configs/config1/: architecture.yaml  composition.yaml  decomposition.yaml  encodings.yaml  graphs.yaml  optimization.yaml  rewards.yaml  topology.yaml
src/project_genesis/core/: cerebrum.py
src/project_genesis/neurons/: message.py  meta_neuron.py  neuron.py  unit_neuron.py
src/project_genesis/nn/: composition.py  decomposition.py  memory.py  reward.py
tests/: __init__.py  test_logic.py  test_mutualism.py  test_research.py  test_utils.py
tests/maci/: __init__.py  test_utils.py
(+103 files in other folders)
