[tool.poetry]
name = "project_genesis"
version = "0.1.0"
description = "Will add later."
authors = ["Abhay Pokhriyal <abhaypokh89@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "project_genesis"
from = "src"

[tool.poetry.urls]
repository = "https://github.com/pythagon-code/project-genesis"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.poetry.dependencies]
poetry-core = "==2.1.3"
python = ">=3.12,<3.14"
pyyaml = "^6.0.2"
nltk = "^3.9.1"
numpy = "^2.3.2"
torch = {version = "^2.8.0", source = "pytorch-cu128"}
transformers = "^4.55.2"
tqdm = "^4.67.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"